# iSubRip

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.toml  default.toml  default_config.toml  example-config.toml  iSubRip.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1_issue_report.yml  2_feature_request.yml  3_question.yml
isubrip/: __main__.py  cli.py  config.py  constants.py  data_structures.py  enums.py  exceptions.py  iSubRip.py  logger.py  namedtuples.py  playlist_downloader.py  scraper.py  subtitles.py  types.py  ui.py  utils.py  webvtt.py
isubrip/commands/: download.py
isubrip/resources/: atv_storefronts.json  default_config.toml
isubrip/scrapers/: appletv_scraper.py  itunes_scraper.py  scraper.py
isubrip/subtitle_formats/: subrip.py  subtitles.py  webvtt.py
isubrip/utils/: enums.py  exceptions.py  types.py  typing.py
tests/: test_utils.py
