[project]
name = "isubrip"
version = "2.5.6"
description = "A Python package for scraping and downloading subtitles from AppleTV / iTunes movie pages."
authors = [
    {name = "Michael Yochpaz"}
]
readme = "README.md"
keywords = [
    "iTunes",
    "AppleTV",
    "movies",
    "subtitles",
    "scrape",
    "scraper",
    "download",
    "m3u8"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.9"
dependencies = [
    "httpx[http2]>=0.27.2",
    "m3u8>=6.0.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "tomli>=2.0.2",
]

[project.urls]
Homepage = "https://github.com/MichaelYochpaz/iSubRip"
Repository = "https://github.com/MichaelYochpaz/iSubRip"
Issues = "https://github.com/MichaelYochpaz/iSubRip/issues"
Changelog = "https://github.com/MichaelYochpaz/iSubRip/blob/main/CHANGELOG.md"

[project.scripts]
isubrip = "isubrip.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
python_version = "3.9"
warn_return_any = true
plugins = [
    "pydantic.mypy"
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "E",
    "F",
    "FA",
    "I",
    "INP",
    "ISC",
    "N",
    "PIE",
    "PGH",
    "PT",
    "PTH",
    "Q",
    "RSE",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
]
ignore = [
    "C416",
    "Q000",
    "RUF010",
    "RUF012",
    "SIM108",
    "TD002",
    "TD003",
    "TRY003",
]
unfixable = ["ARG"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
